cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactibot-deployment
spec:
  selector:
    matchLabels:
      app: reactibot
  replicas: 1
  template:
    metadata:
      labels:
        app: reactibot
    spec:
      containers:
        - name: reactibot
          image: $(IMAGE)
