cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reactibot-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod # Optional, for TLS
spec:
  rules:
    - host: api.reactiflux.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reactibot
                port:
                  number: 80
  tls:
    - hosts:
        - api.reactiflux.com
      secretName: my-tls-secret # Used for HTTPS
